--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,13 +12,11 @@ concurrency:
   cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
 jobs:
   test:
-
     services:
       mlflow:
         image: adacotechjp/mlflow:2.3.1
         ports:
           - 5000:5000
-
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -48,6 +46,10 @@ jobs:
             ${{ runner.os }}-test-
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
+      - name: Creating a dummy file to test logartifacts
+        run: |
+          touch ./test/mlflowclient-tempfile.txt
+          realpath ./test/mlflowclient-tempfile.txt
       - uses: julia-actions/julia-runtest@v1
         env:
           MLFLOW_TRACKING_URI: "http://localhost:5000/api"
