--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,13 +26,14 @@ jobs:
         if: hashFiles('**/requirements.txt', '**/pyproject.toml') == ''
         run: |
           touch ./requirements.txt
-          echo "mlflow==2.20.1" > ./requirements.txt
+          echo "mlflow==3.1.2" > ./requirements.txt
       - uses: actions/setup-python@v4
         with:
           python-version: '3.12.3'
           cache: 'pip'
       - name: Setup mlflow locally
         run: |
+          export MLFLOW_FLASK_SERVER_SECRET_KEY='mlflowclient.jl'
           pip install -r ./requirements.txt
           python3 /opt/hostedtoolcache/Python/3.12.3/x64/bin/mlflow server --app-name basic-auth --host 0.0.0.0 --port 5000 &
           sleep 5
